# llm-prompt-injection

./: .env.example  .gitignore  Dockerfile  PROJECT_STATUS.md  README.md  docker-compose.yml  project.yml  pyproject.toml  quick_start.sh  requirements.txt
config/: custom_attacks.yaml  providers.yaml
configs/: README.md  default.yaml  defaults.yaml  providers.yaml
configs/attacks/: basic_injection.yaml  encoded_injection.yaml  jailbreak.yaml  role_playing.yaml  simple_test.yaml  system_prompt_replace.yaml
examples/: basic_usage.py
scripts/: run_full_test_suite.sh  run_performance_test.sh  run_platform.sh  run_security_test.sh  run_tests.sh  setup.sh  test_functionality.sh  validate_attack_configs.sh  validate_configs.sh
src/: __init__.py  main.py
src/attacks/: __init__.py  base_attack.py  basic_injection.py  role_playing.py
src/config/: __init__.py  factory.py  loader.py  models.py  settings.py  validator.py
src/core/: __init__.py  attacks.py  config.py  evaluator.py  platform.py  provider_manager.py  report_generator.py  reporter.py
src/providers/: __init__.py  base.py  github_provider.py  openai_provider.py
src/templates/: prompt_injection_template.md
tests/: comprehensive_test.py  conftest.py  test_attack_modules.py  test_attacks.py  test_examples.py  test_platform.py  test_provider_integration.py
